# proj-final

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
data/clean/: extensions_data_cleaned.csv  extensions_eda_cleaned.csv
data/raw/: VSCode Extensions_Verified.csv  extensions_verified_repo.csv
figures/no_repo_stars/: metrics_no_repo_stars.txt
figures/with_repo_stars/: metrics_result_repo_stars.txt
models/: one_hot_encoder.pkl
models/preprocess/: X_train_2215256433072_Y_train_2215255998240_power_transformer.pkl  X_train_2269764277680_Y_train_2269764145648_power_transformer.pkl  X_train_2966668209584_Y_train_2966669466064_power_transform.pkl
models/train/: X_train_2215312356608_Y_train_2215311729120_CatBoost.pkl  X_train_2215312356608_Y_train_2215311729120_Decision_Trees.pkl  X_train_2215312356608_Y_train_2215311729120_GaussianNB.pkl  X_train_2215312356608_Y_train_2215311729120_Gradient_Boosting.pkl  X_train_2215332427680_Y_train_2215255998240_BernoulliNB.pkl  (+55 more)
notebooks/: data_loading_cleaning_1.ipynb  data_preprocessing.ipynb  data_preprocessing_1.ipynb  data_preprocessing_1.py  data_scraped_preprocessing.ipynb  data_scraped_wrangling.ipynb  eda_2.ipynb  eda_machine_learning_2.ipynb  eda_machine_learning_2.py  eda_no_binning_2.ipynb  eda_with_binning_2.ipynb  machine_learning_3.ipynb  machine_learning_3_experiment.ipynb  machine_learning_3_no_repo_stars.ipynb  machine_learning_3b.ipynb  machine_learning_3b_no_repo_stars.ipynb  preprocessing_ml_3.ipynb
notebooks/catboost_info/: catboost_training.json  (+2 more)
slides/: Slide_url.txt
(+8 files in other folders)
