[project]
name = "VS_Code_Extensions-Vulnerabilities"
version = "0.1.0"
description = "Final project Ironhack DA-2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "graphviz>=0.21",
    "imblearn>=0.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "optuna>=4.4.0",
    "optuna-dashboard>=0.19.0",
    "pypickle>=2.0.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.4",
    "xlrd>=2.0.2",
]
